--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "ws": "^8.13.0",
     "express": "^4.18.2",
     "http-proxy": "latest",
-    "request": "^2.88.2",
-    "basic-auth": "^2.0.1",
-    "axios": "^0.21.1",
-    "node-cron": "^2.0.3"
+    "request": "^2.88.2"
   },
   "engines": {
     "node": ">=14"
